# Dump-Truck

./: .gitignore  2025-06-27T11-26_export.csv  README.md  brake_system_data.csv  braking_system.py  engine_system.py  main.py  ml_predictions.json  tire_system.db  tire_system.py  vibration_system.py
.github/workflows/: docker-build.yml
app/: .dockerignore  Dockerfile  braking_system.py  engine_system.py  entrypoint.sh  main.py  pyproject.toml  tire_system.py  vibration_system.py
deployment/: .env.example  docker-compose.yml
