[project]
name = "shashank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "streamlit-autorefresh>=1.0.1",
    "tensorflow==2.18.0",
]
